--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.3.1",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
